Adds basic content.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,5 +1,122 @@
     <footer class="footer" role="contentinfo">
         <div class="wrapper">
-            <div class="demo-placeholder">footer placeholder</div>
+
+            <ul class="list list__horizontal">
+                <li class="list_item">
+                    <a class="share-icon"
+                       href="https://facebook.com/cfpb">
+                        <span class="cf-icon cf-icon-facebook-square"></span>
+                        <span class="u-visually-hidden">Visit us on Facebook</span>
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="share-icon"
+                       href="https://twitter.com/cfpb">
+                        <span class="cf-icon cf-icon-twitter-square"></span>
+                        <span class="u-visually-hidden">Visit us on Twitter</span>
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="list list__links">
+                <li>
+                    <a class="list_link" href="/contact-us/">
+                        Contact us
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="/newsroom/">
+                        Newsroom
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/jobs/">
+                        Careers
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/es/">
+                        Español
+                    </a>
+                </li>
+            </ul>
+
+            <a href="/">
+                <img class="header_logo u-js-only"
+                     src="/static/img/logo.svg"
+                     onerror="this.onerror=null;this.src='/static/img/logo.png';"
+                     alt="Consumer Financial Protection Bureau"
+                     width="262"
+                     height="66">
+                <noscript>
+                    <img class="header_logo logo__no-js"
+                         src="/static/img/logo.png"
+                         alt="Consumer Financial Protection Bureau"
+                         width="262"
+                         height="66">
+                </noscript>
+            </a>
+            <p>
+                Consumer Financial Protection Bureau<br>
+                1700 G Street, NW<br>
+                Washington, D.C. 20552
+            </p>
+
+            <i>For general inquiries only</i>
+
+            <ul class="list list__links">
+                <li>
+                    <a class="list_link" href="tel:202-435-7000">
+                        (202) 435-7000
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="mailto:Info@consumerfinance.gov">
+                        Info@consumerfinance.gov
+                    </a>
+                </li>
+            </ul>
+            <ul class="list list__unstyled list__footer">
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/privacy-policy/">
+                        Privacy policy & legal notices
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/accessibility/">
+                        Accessiblity
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/plain-writing/">
+                        Plain writing
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/no-fear-act/">
+                        No FEAR Act
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="http://www.consumerfinance.gov/foia/">
+                        FOIA
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="#">
+                        USA.gov
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="#">
+                        Office of Inspector General
+                    </a>
+                </li>
+                <li>
+                    <a class="list_link" href="#">
+                        Ombudsman
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer><!-- END .footer -->
