--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6558,7 +6558,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   name: Base layout
   family: cfgov-layout
   patterns:
-    - name: Wrapper class
+    - name: .wrapper (base)
       markup: |
         <div class="wrapper">
             Wrapper
@@ -6567,6 +6567,23 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
         - "Turns an element into a cf-grid wrapper at 801px and above."
         - "Includes some explicit declarations for IE8 due to the fact that it
            doesn't support media queries."
+    - name: .wrapper__match-content (modifier)
+      markup: |
+        <div class="wrapper wrapper__match-content">
+            <code>.wrapper.wrapper__match-content</code>
+            <img src="http://placekitten.com/800/40" alt="">
+        </div>
+        <br>
+        <main class="content" id="main" role="main">
+            <div class="wrapper content_wrapper">
+                <section class="content_main">
+                    <code>.wrapper.wrapper_content .content_main</code>
+                    <img src="http://placekitten.com/800/40" alt="">
+                </section>
+            </div>
+        </main>
+      notes:
+        - "..."
   tags:
     - cfgov-layout
 */
@@ -6577,6 +6594,16 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin: 0 auto;
     position: relative;
     clear: both;
+  }
+}
+.wrapper__match-content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media only all and (min-width: 37.5em) {
+  .wrapper__match-content {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 .lt-ie9 .wrapper {
@@ -8875,7 +8902,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     - cfgov-layout
 */
 .footer {
-  padding: 1.5em 0;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
 }
@@ -10843,6 +10871,16 @@ a.category-slug.active {
     margin: 0 auto;
     position: relative;
     clear: both;
+  }
+}
+.hero_wrapper__match-content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media only all and (min-width: 37.5em) {
+  .hero_wrapper__match-content {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 .hero_img-container {
