Better footer structure tweaks.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,201 +1,207 @@
-    <footer class="footer wrapper wrapper__match-content" role="contentinfo">
+    <footer class="footer" role="contentinfo">
+        <div class="wrapper wrapper__match-content">
 
-        <div class="footer_pre">
-            <ul class="list list__horizontal">
-                <li class="list_item">
-                    <a class="share-icon"
-                       href="https://facebook.com/cfpb">
-                        <span class="cf-icon cf-icon-facebook-square"></span>
-                        <span class="u-visually-hidden">Visit us on Facebook</span>
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="share-icon"
-                       href="https://twitter.com/cfpb">
-                        <span class="cf-icon cf-icon-twitter-square"></span>
-                        <span class="u-visually-hidden">Visit us on Twitter</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="footer_pre">
 
-            <ul class="list list__links">
-                <li>
-                    <a class="list_link" href="/contact-us/">
-                        Contact us
-                    </a>
-                </li>
-                <li>
-                    <a class="list_link" href="/newsroom/">
-                        Newsroom
-                    </a>
-                </li>
-                <li>
-                    <a class="list_link" href="http://www.consumerfinance.gov/jobs/">
-                        Careers
-                    </a>
-                </li>
-                <li>
-                    <a class="list_link" href="http://www.consumerfinance.gov/es/">
-                        Español
-                    </a>
-                </li>
-            </ul>
-        </div>
+                <ul class="list list__horizontal">
+                    <li class="list_item">
+                        <a class="share-icon"
+                           href="https://facebook.com/cfpb">
+                            <span class="cf-icon cf-icon-facebook-square"></span>
+                            <span class="u-visually-hidden">Visit us on Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="share-icon"
+                           href="https://twitter.com/cfpb">
+                            <span class="cf-icon cf-icon-twitter-square"></span>
+                            <span class="u-visually-hidden">Visit us on Twitter</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="list list__links">
+                    <li>
+                        <a class="list_link" href="/contact-us/">
+                            Contact us
+                        </a>
+                    </li>
+                    <li>
+                        <a class="list_link" href="/newsroom/">
+                            Newsroom
+                        </a>
+                    </li>
+                    <li>
+                        <a class="list_link" href="http://www.consumerfinance.gov/jobs/">
+                            Careers
+                        </a>
+                    </li>
+                    <li>
+                        <a class="list_link" href="http://www.consumerfinance.gov/es/">
+                            Español
+                        </a>
+                    </li>
+                </ul>
 
-        <div class="footer_left">
-            <a href="/">
-                <img class="header_logo u-js-only"
-                     src="/static/img/logo.svg"
-                     onerror="this.onerror=null;this.src='/static/img/logo.png';"
-                     alt="Consumer Financial Protection Bureau"
-                     width="262"
-                     height="66">
-                <noscript>
-                    <img class="header_logo logo__no-js"
-                         src="/static/img/logo.png"
+            </div><!-- END .footer_pre -->
+
+            <div class="footer_left">
+
+                <a href="/">
+                    <img class="header_logo u-js-only"
+                         src="/static/img/logo.svg"
+                         onerror="this.onerror=null;this.src='/static/img/logo.png';"
                          alt="Consumer Financial Protection Bureau"
                          width="262"
                          height="66">
-                </noscript>
-            </a>
-            <p class="short-desc">
-                Consumer Financial Protection Bureau<br>
-                1700 G Street, NW<br>
-                Washington, D.C. 20552
-            </p>
+                    <noscript>
+                        <img class="header_logo logo__no-js"
+                             src="/static/img/logo.png"
+                             alt="Consumer Financial Protection Bureau"
+                             width="262"
+                             height="66">
+                    </noscript>
+                </a>
+                <p class="short-desc">
+                    Consumer Financial Protection Bureau<br>
+                    1700 G Street, NW<br>
+                    Washington, D.C. 20552
+                </p>
+                <b>For general inquiries only</b>
+                <ul class="list list__links">
+                    <li>
+                        <a class="list_link" href="tel:202-435-7000">
+                            (202) 435-7000
+                        </a>
+                    </li>
+                    <li>
+                        <a class="list_link" href="mailto:Info@consumerfinance.gov">
+                            Info@consumerfinance.gov
+                        </a>
+                    </li>
+                </ul>
 
-            <b>For general inquiries only</b>
+            </div><!-- END .footer_left -->
 
-            <ul class="list list__links">
-                <li>
-                    <a class="list_link" href="tel:202-435-7000">
-                        (202) 435-7000
-                    </a>
-                </li>
-                <li>
-                    <a class="list_link" href="mailto:Info@consumerfinance.gov">
-                        Info@consumerfinance.gov
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <div class="footer_right u-hide-on-mobile">
+                <h2 class="list_item h6">
+                    Researchers
+                </h2>
+                <ul class="list__unstyled">
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Datasets
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Reports
+                        </a>
+                    </li>
+                </ul>
+                <h2 class="list_item h6">
+                    Developers
+                </h2>
+                <ul class="list__unstyled">
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            API's
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Open source projects
+                        </a>
+                    </li>
+                </ul>
+                <h2 class="list_item h6">
+                    Educators
+                </h2>
+                <ul class="list__unstyled">
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Toolkits
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Online learning
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Brochures
+                        </a>
+                    </li>
+                </ul>
+                <h2 class="list_item h6">
+                    Regulated entities
+                </h2>
+                <ul class="list__unstyled">
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Regulations
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Notice and comment
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a href="" class="list_link">
+                            Compliance guides
+                        </a>
+                    </li>
+                </ul>
 
-        <div class="footer_right u-hide-on-mobile">
-            <h2 class="list_item h6">
-                Researchers
-            </h2>
-            <ul class="list__unstyled">
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Datasets
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Reports
-                    </a>
-                </li>
-            </ul>
-            <h2 class="list_item h6">
-                Developers
-            </h2>
-            <ul class="list__unstyled">
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        API's
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Open source projects
-                    </a>
-                </li>
-            </ul>
-            <h2 class="list_item h6">
-                Educators
-            </h2>
-            <ul class="list__unstyled">
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Toolkits
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Online learning
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Brochures
-                    </a>
-                </li>
-            </ul>
-            <h2 class="list_item h6">
-                Regulated entities
-            </h2>
-            <ul class="list__unstyled">
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Regulations
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Notice and comment
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a href="" class="list_link">
-                        Compliance guides
-                    </a>
-                </li>
-            </ul>
-        </div>
+            </div><!-- END .footer_right -->
 
-        <div class="footer_post">
-            <ul class="list list__unstyled list__spaced">
-                <li class="list_item">
-                    <a class="list_link" href="http://www.consumerfinance.gov/privacy-policy/">
-                        Privacy policy & legal notices
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="http://www.consumerfinance.gov/accessibility/">
-                        Accessiblity
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="http://www.consumerfinance.gov/plain-writing/">
-                        Plain writing
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="http://www.consumerfinance.gov/no-fear-act/">
-                        No FEAR Act
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="http://www.consumerfinance.gov/foia/">
-                        FOIA
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="#">
-                        USA.gov
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="#">
-                        Office of Inspector General
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="#">
-                        Ombudsman
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <div class="footer_post">
 
+                <ul class="list list__unstyled list__spaced">
+                    <li class="list_item">
+                        <a class="list_link" href="http://www.consumerfinance.gov/privacy-policy/">
+                            Privacy policy & legal notices
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="http://www.consumerfinance.gov/accessibility/">
+                            Accessiblity
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="http://www.consumerfinance.gov/plain-writing/">
+                            Plain writing
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="http://www.consumerfinance.gov/no-fear-act/">
+                            No FEAR Act
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="http://www.consumerfinance.gov/foia/">
+                            FOIA
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="#">
+                            USA.gov
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="#">
+                            Office of Inspector General
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link" href="#">
+                            Ombudsman
+                        </a>
+                    </li>
+                </ul>
+
+            </div><!-- END .footer_post -->
+            
+        </div><!-- END .wrapper.wrapper__match-content -->
     </footer><!-- END .footer -->
